fix: make logo visible

--- a/app/src/app/(auth)/styles.module.scss
+++ b/app/src/app/(auth)/styles.module.scss
@@ -17,7 +17,7 @@
 .contentContainer {
   width: 55%;
   height: 100%;
-  padding: 7% 5%;
+  padding: 4% 5%;
   flex-direction: column;
   overflow: auto;
 }
@@ -30,7 +30,6 @@
 }
 
 .titleContainer {
-  padding-top: 2em;
   flex-direction: column;
 }
 
